Added String Encoding